--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header class="lg:px-28 px-2 py-6 bg-gray-200">
+    <header class="lg:px-8 px-2 py-6 bg-gray-200">
         <div class="navbar">
             <div class="navbar-start">
               <div class="dropdown">
@@ -77,7 +77,7 @@
                   <li class="hover:font-bold text-base text-[#494949]"><a>ContactUs</a></li>
               </ul>
             </div>
-            <div class="navbar-end hidden lg:flex justify-evenly max-w-76" >
+            <div class="navbar-end hidden lg:flex justify-evenly max-w-72" >
               <div class="p-3 bg-neutral-50 rounded-full"><svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -122,7 +122,7 @@
             </div>
           </div>
 <!-- Bannar Section -->
-      <section class="mt-6 text-center">
+      <section id="home" class="mt-6 text-center">
         <img src="assets/banner.png" class="mx-auto">
         <h1 class="text-3xl lg:text-7xl manrope-font font-bold text-[#212121]">A barn house of this design has a striking appearance</h1>
         <p class="manrope-font text-sm lg:text-base mt-3 px-16 text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light</p>
@@ -135,6 +135,46 @@
     <!-- Main Section   -->
 <main>
 <!-- About Section -->
+ <section id="about" class="mt-6 py-2 px-28 bg-red-400">
+
+<div><img src="assets/Vector.png" alt="" srcset=""></div>
+<div class="flex">
+  <div>
+    <a href="" class="btn bg-neutral-50"> About Us</a>
+    <h1>We design thughtful, <br>liveable spaces</h1>
+    <p>The barn house captivates with its blend of rustic charm and 
+      modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+      <div class="card lg:card-side bg-base-100 shadow-xl">
+        <figure>
+          <img
+            src="assets/commercial.png"
+            alt="Album" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">Commercial</h2>
+          <p>The barn house captivates with its blend of rustic charm and modern..</p>
+         
+        </div>
+      </div>
+      <div class="card lg:card-side bg-base-100 shadow-xl">
+        <figure>
+          <img
+            src="assets/residential.png"
+            alt="Album" />
+        </figure>
+        <div class="card-body">
+          <h2 class="card-title">Residential</h2>
+          <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          
+        </div>
+      </div>
+  </div>
+  <div><img src="assets/Rectangle.png" alt=""></div>
+</div>
+
+
+ </section>
 </main>
     <!-- Footer -->
 </body>
